--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,2 +1,28 @@
 $color-example: #ff0000;
 $fontsize-example: 16px;
+
+$white: #ffffff;
+$white_smoke: #f5f5f5;
+$gray_desertStorm: #ece9e6;
+$gray_gainsboro: #dddddd;
+$gray_nobel: #999999;
+$black_50: rgba(0, 0, 0, 0.5);
+$orange_zorba: #a19283;
+$orange_bistre: #442606;
+$black: #000000;
+
+$font-XS: 12px;
+$font-S: 14px;
+$font-M: 16px;
+$font-L: 20px;
+$font-XL: 36px;
+$font-XXL: 40px;
+
+$fontfamily-mincho: "Noto Serif JP", serif;
+$fontfamily-gothic: "Roboto", "Noto Sans JP", sans-serif;
+
+$breakpoint-XS: 576px;
+$breakpoint-S: 576px;
+$breakpoint-M: 768px;
+$breakpoint-L: 992px;
+$breakpoint-XL: 1200px;
