--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -1,34 +1,33 @@
 @use "../../variables" as *;
 
 .message {
-  color: $black;
   text-align: center;
-}
-.message h1 {
-  font-family: $fontfamily-mincho;
-  font-size: $font-L;
-  line-height: 30px;
-  padding: 2px 0 8px;
-  margin: 12px 12.5px 0;
-}
-.message p {
-  font-family: $fontfamily-gothic;
-  font-size: $font-S;
-  line-height: 28px;
-  padding: 0 30.5px;
-  margin: 0 20px 10px;
+  padding: 12px 12.5px 10px;
+
+  h2 {
+    font-family: $fontfamily-mincho;
+    font-size: $font-L;
+    line-height: 30px;
+    margin-bottom: 8px;
+  }
+  p {
+    font-family: $fontfamily-gothic;
+    font-size: $font-S;
+    line-height: 28px;
+  }
 }
 
 @media (min-width: $breakpoint-L) {
-  .message h1 {
-    font-size: $font-XL;
-    line-height: 54px;
-    padding-bottom: 10px;
-    margin: 52px 20px 0;
-  }
-  .message p {
-    line-height: 36px;
-    padding: 0 101.5px;
-    margin-bottom: 52px;
+  .message {
+    padding: 52px 20px;
+
+    h2 {
+      font-size: $font-XL;
+      line-height: 54px;
+      margin-bottom: 10px;
+    }
+    p {
+      line-height: 36px;
+    }
   }
 }
