--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -11,9 +11,9 @@
     margin-bottom: 8px;
   }
   p {
-    font-family: $fontfamily-gothic;
     font-size: $font-S;
     line-height: 28px;
+    margin: 0px;
   }
 }
 
