--- a/src/components/molecules/news-and-events-title/news-and-events-title.html
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.html
@@ -1,8 +1,10 @@
 <div class="news-events-title">
-    <div class="news-events-title1">
-        News
-    </div>
-    <div class="news-events-title2">
-        お知らせ
+    <div class="news-events-title-container">
+        <h2 class="news-events-title-EN">
+            News
+        </h2>
+        <span class="news-events-title-JP">
+            お知らせ
+        </span>
     </div>
 </div>
