--- a/src/components/molecules/news-and-events-more/news-and-events-more.html
+++ b/src/components/molecules/news-and-events-more/news-and-events-more.html
@@ -1,6 +1,4 @@
-<script src="https://kit.fontawesome.com/9bd01ce673.js" crossorigin="anonymous"></script>
-
-<div class="news-and-events-more">
+<a class="news-and-events-more" href="#" >
     お知らせ一覧
-<i class="fa-solid fa-chevron-right"></i>
-</div>
+     <i class="fas fa-chevron-right"></i>
+</a>
