--- a/src/components/molecules/cards/card.html
+++ b/src/components/molecules/cards/card.html
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-top">
-    <img src="image-concept.png" class="card-img" alt="image-concept">
+  <a class="card-top" href="#">
+    <img src="cards-img/image-concept.png" class="card-img" alt="image-concept">
     <h2 class="card-title">card-title</h2>
-  </div>
+  </a>
   <div class="card-body"> 
       <p class="card-text">card-text</p>
       <a class="button" href="#"> btn-text</a>
