--- a/src/components/molecules/cards/card.scss
+++ b/src/components/molecules/cards/card.scss
@@ -1,6 +1,7 @@
 @use "../../variables" as *;
 
 .card {
+  border: none;
   .card-top {
     .card-img {
       object-fit: cover;
@@ -21,6 +22,7 @@
     background-color: $white_smoke;
     padding: 30px 30px 40px;
     .card-text {
+      text-align: center;
       font-size: $font-S;
       line-height: 33px;
       margin-bottom: 30px;
