--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -6,28 +6,29 @@
   .news-contents {
     margin-bottom: 30px;
     background-color: $white;
-    article:nth-child(5) {
-      border-bottom: 1px solid $gray_gainsboro;
-    }
 
     article {
       padding: 20px;
-      border: 1px solid $gray_gainsboro;
-      border-bottom: none;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      border: 1px solid $gray_gainsboro;
+      &:not(:last-child) {
+        border-bottom: none;
+      }
       .news-time {
         font-size: $font-XS;
+        line-height: 12px;
         color: $gray_nobel;
         margin-bottom: 10px;
         display: block;
       }
       .news-article-title {
         font-size: $font-M;
+        line-height: 23.17px;
         color: $black;
         text-decoration: none;
-        transition: 0.2s;
+        transition-duration: 0.2s;
         &:hover {
           color: $orange_bistre;
         }
