--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -7,30 +7,23 @@
   @media (min-width: $breakpoint-M) {
     margin-bottom: 0;
   }
-}
-
-.plan-title {
-  background-color: $orange_zorba;
-  color: $white;
-  font-weight: bold;
-  font-size: $font-L;
-  padding: 20px 0;
-}
-.plan-detail {
   li {
     list-style: none;
     border: solid 1px $gray_gainsboro;
-    border-bottom: none;
     padding: 20px 0;
+    &:first-child {
+      background-color: $orange_zorba;
+      color: $white;
+      font-weight: bold;
+      font-size: $font-L;
+    }
+    &:not(:last-child) {
+      border-bottom: none;
+    }
   }
-  li:last-child {
-    border-bottom: solid 1px $gray_gainsboro;
-  }
-
   .plan-price {
     background-color: $gray_desertStorm;
     padding: 24px 0;
-
     .plan-price-text {
       margin-bottom: 16px;
       color: $orange_bistre;
@@ -45,16 +38,16 @@
       margin: 0;
     }
   }
-}
-ul:nth-child(even) {
-  border: solid 5px $orange_bistre;
-  .plan-title {
-    background-color: $orange_bistre;
-    padding: 15px 0 20px;
-  }
-  .plan-detail {
-    li:last-child {
-      padding-bottom: 15px;
+  &:nth-child(even) {
+    border: solid 5px $orange_bistre;
+    li {
+      &:first-child {
+        background-color: $orange_bistre;
+        padding: 15px 0 20px;
+      }
+      &:last-child {
+        padding-bottom: 15px;
+      }
     }
   }
 }
