--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -11,37 +11,40 @@
     </div>
     <div class="news-contents">
         <article>
-            <time class="news-time">2018.06.20</time>
-            <a class="news-article-title" href="#">ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。</a>
-        </article>
-        <article>
-            <time class="news-time">2018.06.18</time>
-            <a class="news-article-title" href="#">3種のレイアウトから選択できるテンプレートを固定ページに実装</a>
-        </article>
-        <article>
-            <time class="news-time">2018.06.12</time>
-            <a class="news-article-title" href="#">
-                利用者からのご質問をまとめた「FAQ」ページをアップしました。
+            <a href="#">
+                 <time class="news-time">2018.06.20</time>
+                 <h3 class="news-article-title">ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。</h3>
             </a>
         </article>
         <article>
-            <time class="news-time"> 2018.06.08</time>
-            <a class="news-article-title" href="#">
-                デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？
+            <a href="#">
+                <time class="news-time">2018.06.18</time>
+                <h3 class="news-article-title">3種のレイアウトから選択できるテンプレートを固定ページに実装</h3>
             </a>
         </article>
         <article>
-            <time class="news-time">2018.06.02</time>
-            <a class="news-article-title" href="#">
-                テーマのアップデート情報について
+            <a href="#">
+                <time class="news-time">2018.06.12</time>
+                <h3 class="news-article-title">利用者からのご質問をまとめた「FAQ」ページをアップしました。</h3>
+            </a>
+        </article>
+        <article>
+            <a href="#">
+                <time class="news-time">2018.06.08</time>
+                <h3 class="news-article-title">デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？</h3>
+            </a>
+        </article>
+        <article>
+            <a href="#">
+                <time class="news-time">2018.06.02</time>
+                <h3 class="news-article-title">テーマのアップデート情報について</h3>
             </a>
         </article>
     </div>
     <div class="news-and-events-more-wrapper">
-        <a class="news-and-events-more" href="#" >
+        <a class="news-and-events-more">
             お知らせ一覧
              <i class="fas fa-chevron-right"></i>
         </a>  
     </div>  
-
 </div>
