--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -2,35 +2,36 @@
 
 .organisms-news {
   padding-bottom: 35px;
-
   .news-contents {
     margin-bottom: 30px;
     background-color: $white;
-
     article {
       padding: 20px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       border: 1px solid $gray_gainsboro;
       &:not(:last-child) {
         border-bottom: none;
       }
-      .news-time {
-        font-size: $font-XS;
-        line-height: 12px;
-        color: $gray_nobel;
-        margin-bottom: 10px;
-        display: block;
-      }
-      .news-article-title {
-        font-size: $font-M;
-        line-height: 23.17px;
-        color: $black;
+      a {
         text-decoration: none;
-        transition-duration: 0.2s;
-        &:hover {
-          color: $orange_bistre;
+        .news-time {
+          font-size: $font-XS;
+          line-height: 1;
+          color: $gray_nobel;
+          margin-bottom: 10px;
+          display: block;
+        }
+        .news-article-title {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          font-size: $font-M;
+          color: $black;
+          font-weight: normal;
+          margin: 0;
+          transition-duration: 0.2s;
+          &:hover {
+            color: $orange_bistre;
+          }
         }
       }
     }
