--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -59,9 +59,7 @@
     padding-bottom: 35px;
     article {
       padding: 10px 20px 16px;
-    }
-    article {
-      .events-img {
+      img {
         display: none;
       }
     }
