--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -7,6 +7,11 @@
     background-color: $white;
     article {
       border: 1px solid $gray_gainsboro;
+      &:hover {
+        img {
+          transform: scale(1.2);
+        }
+      }
       &:not(:last-child) {
         border-bottom: none;
       }
@@ -19,9 +24,6 @@
           img {
             transition-duration: 0.5s;
             object-fit: cover;
-            &:hover {
-              transform: scale(1.2);
-            }
           }
         }
         .events-article-title-time {
@@ -57,10 +59,16 @@
 @media (max-width: $breakpoint-L) {
   .organisms-events {
     padding-bottom: 35px;
-    article {
-      padding: 10px 20px 16px;
-      img {
-        display: none;
+    .events-contents {
+      article {
+        a {
+          .events-article-title-time {
+            padding: 10px 20px 16px;
+          }
+          img {
+            display: none;
+          }
+        }
       }
     }
   }
