--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,52 +1,54 @@
-<nav class="navbar navbar-expand-xl navbar-dark ">
-  <a class="navbar-brand" href="#">
-    <img src="img/logo.png" alt="logo-img">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span><img src="img/humberger-icon.svg"></img></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">HOME</a>
-      </li>
-      <li class="nav-item active dropdown">
-        <a class="nav-link dropdown-toggle float-right d-xl-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="img/icon-plus.svg">
-            <a class="nav-link concept " tabindex="-1">CONCEPT</a>
-        </a>
-        
-        <div class="dropdown-menu collapse" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">ブログアーカイブ</a>
-          <a class="dropdown-item" href="#">お知らせアーカイブ</a>
-          <a class="dropdown-item" href="#">イベントアーカイブ</a>
-          <a class="dropdown-item" href="#">インタビューアーカイブ</a>
-          <a class="dropdown-item" href="#">FAQページ</a>
-          <a class="dropdown-item" href="#">固定ページ(デフォルト)</a>
-          <a class="dropdown-item" href="#">CONCEPT</a>
-          <a class="dropdown-item" href="#">SERVICE</a>
-          <a class="dropdown-item" href="#">FLOOR</a>
-          <a class="dropdown-item" href="#">ACCESS</a>
-        </div>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">SERVICE</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">FLOOR</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">INTERVIEW</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">BLOG</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">ACCESS</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">DOWNLOAD</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<header>
+  <nav class="navbar navbar-expand-xl navbar-dark ">
+    <a class="navbar-brand" href="#">
+      <img src="img/logo.png" alt="logo-img">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span><img src="img/humberger-icon.svg"></img></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">HOME</a>
+        </li>
+        <li class="nav-item active dropdown">
+          <a class="nav-link dropdown-toggle float-right d-xl-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="img/icon-plus.svg">
+              <a class="nav-link concept " tabindex="-1">CONCEPT</a>
+          </a>
+          
+          <div class="dropdown-menu collapse" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">ブログアーカイブ</a>
+            <a class="dropdown-item" href="#">お知らせアーカイブ</a>
+            <a class="dropdown-item" href="#">イベントアーカイブ</a>
+            <a class="dropdown-item" href="#">インタビューアーカイブ</a>
+            <a class="dropdown-item" href="#">FAQページ</a>
+            <a class="dropdown-item" href="#">固定ページ(デフォルト)</a>
+            <a class="dropdown-item" href="#">CONCEPT</a>
+            <a class="dropdown-item" href="#">SERVICE</a>
+            <a class="dropdown-item" href="#">FLOOR</a>
+            <a class="dropdown-item" href="#">ACCESS</a>
+          </div>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">SERVICE</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">FLOOR</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">INTERVIEW</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">BLOG</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">ACCESS</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">DOWNLOAD</a>
+        </li>
+      </ul>
+    </div>
+  </nav>  
+</header>
