--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -3,12 +3,15 @@
 .top {
   margin-bottom: 40px;
   .top-image-wrapper {
-    height: 36vw;
+    height: 360px;
     background-image: url(./top-image.png);
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
+
     h2 {
       color: $white;
       font-size: $font-L;
