--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -27,6 +27,7 @@ header {
         }
       }
       .dropdown-menu {
+        border: none;
         padding: 0;
         margin-left: 12px;
         background-color: $black;
