--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -1,6 +1,6 @@
 @use "../../variables" as *;
 
-header {//TODO：必要ない記述を確認する
+header {
   .navbar {
     padding: 0 16px;
     background-color: $black;
@@ -19,20 +19,29 @@ header {//TODO：必要ない記述を確認する
       margin-left: 16px;
       .nav-item {
         font-size: $font-S;
-        .nav-link {
+        padding: 0px;
+        .icon-plus-wrapper.collapsed{
+          padding-top: 15px;
+          padding-bottom: 0px;  
+        }
+        .nav-link{
           padding: 15px 0;
         }
-        .icon-plus-wrapper{
-          margin-top:13px;
-          padding:0;
+        .concept-lg{
+          padding: 15px 0;
         }
         .concept-menu {
           margin-left: 12px;
-          .dropdown-item { 
-            padding: 15px 0px;
-            color: $white;
-            background-color: $black;
-            font-size: $font-S;
+          padding: 0;
+          .concept-item {
+            .concept-link-text{
+              background-color: $black;
+              padding: 15px 0;
+              font-size: $font-S;
+              text-decoration: none;
+              color: $white;
+              display: block;
+            }
           }
         }
       }
@@ -54,23 +63,20 @@ header {//TODO：必要ない記述を確認する
         margin-left: auto;
         .nav-item {
           .nav-link {
-            cursor: pointer;
             padding: 35px 20px;
             &:hover {
               color: $gray_nobel;
             }
-            &:focus+ .concept-menu{
-              display: block;
-            } 
           }
           .concept-menu { 
-            position:absolute;
-            display: none;
-            .dropdown-item {
-              padding: 18px 50px 18px 18px;
-              &:hover {
-                background-color: $orange_bistre;
-                color: $white;
+            position: absolute;
+            .concept-item {
+              .concept-link-text{
+                padding: 18px 50px 18px 18px;
+                transition-duration: 0.2s;
+                &:hover {
+                  background-color: $orange_bistre;
+                }
               }
             }
           } 
