--- a/src/components/organisms/cards/cards.html
+++ b/src/components/organisms/cards/cards.html
@@ -13,7 +13,7 @@
     <div class="card col mb-5">
       <a class="card-top" href="#">
         <img src="../../molecules/cards/cards-img/image-survice.png" class="card-img" alt="image-concept">
-        <h2 class="card-title">SURVICE</h2>
+        <h2 class="card-title">SERVICE</h2>
       </a>
       <div class="card-body"> 
         <p class="card-text">喫茶・軽食を楽しめるカフェスペース。ビジネス書から最新の雑誌まで取りそろえるブックスペース。ブース型のパーソナルワークスペースに、開放感があるコワーキングスペース。</p>
