--- a/src/components/organisms/plans/plans.html
+++ b/src/components/organisms/plans/plans.html
@@ -13,7 +13,7 @@
                 デイタイムプラン
             </li>
             <li class="plan-price">
-                <p class="plan-price-text"><span>￥</span>5,000</p>
+                <p class="plan-price-text">5,000</p>
                 <p class="plan-price-per">月額</p>
             </li>
             <li class="plan-admission">入会金0円</li>
@@ -26,7 +26,7 @@
                 スタンダードプラン
             </li>
             <li class="plan-price">
-                <p class="plan-price-text"><span>￥</span>15,000</p>
+                <p class="plan-price-text">15,000</p>
                 <p class="plan-price-per">月額</p>
             </li>
             <li class="plan-admission">入会金0円</li>
@@ -39,7 +39,7 @@
                 プレミアムプラン
             </li>
             <li class="plan-price">
-                <p class="plan-price-text"><span>￥</span>20,000</p>
+                <p class="plan-price-text">20,000</p>
                 <p class="plan-price-per">月額</p>
             </li>
             <li class="plan-admission">入会金5000円</li>
@@ -49,6 +49,6 @@
         </ul>   
     </div>
     <a class="button" href="#">
-        btn-text
+        プラン料金
     </a>
 </div>
