--- a/src/components/molecules/plan/plan.html
+++ b/src/components/molecules/plan/plan.html
@@ -3,7 +3,7 @@
         デイタイムプラン
     </li>
     <li class="plan-price">
-        <p class="plan-price-text"><span>￥</span>5,000</p>
+        <p class="plan-price-text">5,000</p>
         <p class="plan-price-per">月額</p>
     </li>
     <li class="plan-admission">入会金0円</li>
@@ -16,7 +16,7 @@
         スタンダードプラン
     </li>
     <li class="plan-price">
-        <p class="plan-price-text"><span>￥</span>15,000</p>
+        <p class="plan-price-text">15,000</p>
         <p class="plan-price-per">月額</p>
     </li>
     <li class="plan-admission">入会金0円</li>
