--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -1,6 +1,6 @@
 @use "../../variables" as *;
 
-.plan {
+.plan { 
   text-align: center;
   padding-left: 0;
   margin-bottom: 24px;
@@ -10,7 +10,7 @@
   li {
     list-style: none;
     border: solid 1px $gray_gainsboro;
-    padding: 20px 0;
+    padding: 20px;
     &:first-child {
       background-color: $orange_zorba;
       color: $white;
@@ -24,14 +24,15 @@
   }
   .plan-price {
     background-color: $gray_desertStorm;
-    padding: 24px 0;
+    padding: 24px;
     .plan-price-text {
       margin-bottom: 16px;
       color: $orange_bistre;
       font-weight: bold;
       font-size: $font-XXL;
-      span {
-        font-size: $font-L;
+      &::before{
+        content: "￥";
+        font-size: $font-M;
       }
     }
     .plan-price-per {
@@ -44,7 +45,7 @@
     li {
       &:first-child {
         background-color: $orange_bistre;
-        padding: 15px 0 20px;
+        padding-top: 15px;
       }
       &:last-child {
         padding-bottom: 15px;
