--- a/src/components/organisms/plans/plans.scss
+++ b/src/components/organisms/plans/plans.scss
@@ -6,12 +6,15 @@
     padding: 0;
     h2 {
       color: $orange_bistre;
+      @media (min-width: $breakpoint-M){
+        font-size: $font-L;
+      }
     }
   }
   .plan-container {
     margin: 32px auto 0;
     .plan {
-      margin-bottom: 29px;
+      margin-bottom: auto;
       &:last-child {
         margin-bottom: 24px;
       }
@@ -25,5 +28,9 @@
   }
   .button {
     margin: 0 auto 35px;
+    @media (min-width: $breakpoint-M){
+      margin-bottom:100px;
+    }
+
   }
 }
