--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -12,42 +12,43 @@
           <a class="nav-link" href="#">HOME</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link float-right d-xl-none icon-plus-wrapper" href="#concept-collapse"  role="button" data-toggle="collapse"  aria-expanded="false" aria-controls="collapse">
-            <img src="img/icon-plus.svg">
+          <a class="nav-link float-right d-xl-none icon-wrapper" href="#concept-collapse"  role="button" data-toggle="collapse"  aria-expanded="false" aria-controls="collapse">
+            <img class="icon-plus" src="img/icon-plus.svg">
+            <img class="icon-minus" src="img/icon-minus.svg">
           </a>
           <a class="nav-link concept d-none d-xl-block concept-xl" tabindex="-1" href="#concept-collapse"  role="button" data-toggle="collapse"  aria-expanded="false" aria-controls="collapse">CONCEPT</a>
           <a class="nav-link concept d-xl-none concept-lg" href="#">CONCEPT</a>
           <ul class="concept-menu collapse" id="concept-collapse">
-            <il class="concept-item" href="#">
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">ブログアーカイブ</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">お知らせアーカイブ</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">イベントアーカイブス</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">インタビューアーカイブ</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">FAQページ</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">固定ページ(デフォルト)</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">CONCEPT</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">SERVICE</a>
-            </il>
-            <il class="concept-item" href="#">
+            </li>
+            <li class="concept-item" href="#">
               <a class="concept-link-text" href="#">FLOOR</a>
-            </il>
-            <il class="concept-item" href="#">
-              <a class="concept-link-text" href="#">ACCRSS</a>
-            </il>
+            </li>
+            <li class="concept-item" href="#">
+              <a class="concept-link-text" href="#">ACCESS</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item active">
