--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -3,8 +3,8 @@
         <a href="#" class="footer-brand-logo">
             <img src="./img/brand-logo.png">
         </a>
-        <div class="footer-adress-text">
-            <adress class="footer-adress">〒532-0011　大阪市淀川区西中島6丁目8-23テスト<br>
+        <div class="footer-adress">
+            <adress class="footer-adress-text">〒532-0011　大阪市淀川区西中島6丁目8-23テスト<br>
                 EL.06-1234-5678 FAX.06-1234-5678　営業時間 / 9:00 - 22:00　定休日 / 不定休
             </adress>
         </div>
