--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -23,7 +23,7 @@
           flex-shrink: 0;
           img {
             transition-duration: 0.5s;
-            object-fit: cover;
+            object-fit: contain;
           }
         }
         .events-article-title-time {
@@ -36,7 +36,7 @@
             font-weight: normal;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
+            -webkit-line-clamp: 2;
             overflow: hidden;
             &:hover {
               color: $orange_bistre;
