--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -29,6 +29,7 @@
           font-weight: normal;
           margin: 0;
           transition-duration: 0.2s;
+          line-height: 23px;
           &:hover {
             color: $orange_bistre;
           }
