templates-news-and-eventsの修正3

--- a/src/components/templates/news-and-events/news-and-events.scss
+++ b/src/components/templates/news-and-events/news-and-events.scss
@@ -8,5 +8,8 @@
         .events-contents{
             margin-top: 0;
         }
+        .organisms-news{
+            padding-bottom: 0;
+        }
     }
 }
