--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -3,10 +3,10 @@
         <a href="#" class="footer-brand-logo">
             <img src="./img/brand-logo.png">
         </a>
-        <div class="footer-adress">
-            <adress class="footer-adress-text">〒532-0011　大阪市淀川区西中島6丁目8-23テスト<br>
+        <div class="footer-address">
+            <address class="footer-address-text">〒532-0011　大阪市淀川区西中島6丁目8-23テスト<br>
                 TEL.06-1234-5678 FAX.06-1234-5678　営業時間 / 9:00 - 22:00　定休日 / 不定休
-            </adress>
+            </address>
         </div>
         <div class="sns-link">
             <a href="#">
@@ -42,10 +42,10 @@
         <li class="nav-item">
             <a class="nav-link active" href="#">BLOG</a>
         </li>
-        <li class="nav-item access">
+        <li class="nav-item">
             <a class="nav-link active" href="#">ACCESS</a>
         </li>
-        <li class="nav-item download">
+        <li class="nav-item">
             <a class="nav-link active" href="#">DOWNLOAD</a>
         </li>
     </ul>
