imgファイル作成と相対パス変更

--- a/src/components/molecules/cards/card.html
+++ b/src/components/molecules/cards/card.html
@@ -1,6 +1,6 @@
 <div class="card">
   <a class="card-top" href="#">
-    <img src="./cards-img/image-concept.png" class="card-img" alt="image-concept">
+    <img src="../../../img/cards-img/image-concept.png" class="card-img" alt="image-concept">
     <h2 class="card-title">card-title</h2>
   </a>
   <div class="card-body"> 
