--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,10 +1,10 @@
 <header>
   <nav class="navbar navbar-expand-xl navbar-dark ">
     <a class="navbar-brand" href="#">
-      <img src="img/logo.png" alt="logo-img">
+      <img src="../../../img/header-img/logo.png" alt="logo-img">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span><img src="img/humberger-icon.svg"></img></span>
+      <span><img src="../../../img/header-img/humberger-icon.svg"></img></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -13,8 +13,8 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link float-right d-xl-none icon-wrapper" href="#concept-collapse"  role="button" data-toggle="collapse"  aria-expanded="false" aria-controls="collapse">
-            <img class="icon-plus" src="img/icon-plus.svg">
-            <img class="icon-minus" src="img/icon-minus.svg">
+            <img class="icon-plus" src="../../../img/header-img/icon-plus.svg">
+            <img class="icon-minus" src="../../../img/header-img/icon-minus.svg">
           </a>
           <a class="nav-link concept d-none d-xl-block concept-xl" tabindex="-1" href="#concept-collapse"  role="button" data-toggle="collapse"  aria-expanded="false" aria-controls="collapse">CONCEPT</a>
           <a class="nav-link concept d-xl-none concept-lg" href="#">CONCEPT</a>
