--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -4,7 +4,7 @@
   margin-bottom: 40px;
   .top-image-wrapper {
     height: 360px;
-    background-image: url(./top-image.png);
+    background-image: url(../../../img/top-img/top-image.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
