--- a/src/components/organisms/cards/cards.html
+++ b/src/components/organisms/cards/cards.html
@@ -2,7 +2,7 @@
   <div class="row row-cols-1 row-cols-md-3">
     <div class="card col mb-5">
       <a class="card-top" href="#">
-        <img src="../../molecules/cards/cards-img/image-concept.png" class="card-img" alt="image-concept">
+        <img src="../../../img/cards-img/image-concept.png" class="card-img" alt="image-concept">
         <h2 class="card-title">CONCEPT</h2>
       </a>
       <div class="card-body"> 
@@ -12,7 +12,7 @@
     </div>
     <div class="card col mb-5">
       <a class="card-top" href="#">
-        <img src="../../molecules/cards/cards-img/image-survice.png" class="card-img" alt="image-concept">
+        <img src="../../../img/cards-img/image-survice.png" class="card-img" alt="image-concept">
         <h2 class="card-title">SERVICE</h2>
       </a>
       <div class="card-body"> 
@@ -22,7 +22,7 @@
     </div>
     <div class="card col mb-5">
       <a class="card-top" href="#">
-        <img src="../../molecules/cards/cards-img/image-floor.png" class="card-img" alt="image-concept">
+        <img src="../../../img/cards-img/image-floor.png" class="card-img" alt="image-concept">
         <h2 class="card-title">FLOOR</h2>
       </a>
       <div class="card-body"> 
