img相対パス修正

--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer-top">
         <a href="#" class="footer-brand-logo">
-            <img src="../../../img/brand-logo.png">
+            <img src="../../../img/footer-img/brand-logo.png">
         </a>
         <div class="footer-address">
             <address class="footer-address-text">〒532-0011　大阪市淀川区西中島6丁目8-23テスト<br>
