--- a/src/components/templates/news-and-events/news-and-events.html
+++ b/src/components/templates/news-and-events/news-and-events.html
@@ -65,7 +65,7 @@
                 <article>
                     <a href="#">
                         <div class="events-img-wrapper">
-                            <img src="../../organisms/events/events-img/events-seminar.png" alt="events-seminar.png">
+                            <img src="../../../img/events-img/events-seminar.png" alt="events-seminar.png">
                         </div>
                         <div class="events-article-title-time">
                             <h3 class="events-article-title">全ての業種に対応した起業応援セミナーを開催します。</h3>
@@ -76,7 +76,7 @@
                 <article>
                     <a href="#">
                         <div class="events-img-wrapper">
-                            <img src="../../organisms/events/events-img/events-gathering.png"  alt="events-gathering.png">
+                            <img src="../../../img//events-img/events-gathering.png"  alt="events-gathering.png">
                         </div>
                         <div class="events-article-title-time">
                             <h3>第3回 Switchクリエイター交流会開催いたします！</h3>
@@ -87,7 +87,7 @@
                 <article>
                     <a href="#">
                         <div class="events-img-wrapper">
-                            <img src="../../organisms/events/events-img/events-lesson.png" alt="events-lesson.png">
+                            <img src="../../../img/events-img/events-lesson.png" alt="events-lesson.png">
                         </div>
                         <div class="events-article-title-time">
                             <h3 class="events-article-title">Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。</h3>
