max-widthとheader位置設定

--- a/src/components/organisms/about/about.html
+++ b/src/components/organisms/about/about.html
@@ -1,4 +1,4 @@
-<div class="about conatainer">
+<div class="about container">
     <div class="about-img-wrapper row no-gutters">
         <div class="about-img col-6 col-lg-3">
             <img src="../../../img/about-img/about-book-coffee.png" class="about-img1" alt="about-img1">
