--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -2,6 +2,8 @@
 
 header {
   .navbar {
+    width:100%;
+    position:absolute;
     padding: 0 16px;
     background-color: $black;
     .navbar-brand {
