--- a/src/components/organisms/about/about.scss
+++ b/src/components/organisms/about/about.scss
@@ -1,6 +1,7 @@
 @use "../../variables" as *;
 
 .about {
+  margin-top:80px;
   margin-bottom: 40px;
   background-color: $white;
   .about-img-wrapper {
