--- a/src/components/organisms/plans/plans.scss
+++ b/src/components/organisms/plans/plans.scss
@@ -1,13 +1,15 @@
 @use "../../variables" as *;
 
 .plans {
+  margin-top:60px;
   padding: 0 20px;
   .message {
     padding: 0;
     h2 {
+      line-height: 1.5;
       color: $orange_bistre;
       @media (min-width: $breakpoint-M){
-        font-size: $font-L;
+        font-size: $font-XL;
       }
     }
   }
@@ -34,6 +36,5 @@
     @media (min-width: $breakpoint-M){
       margin-bottom:100px;
     }
-
   }
 }
